objects/AppError__c.object
<CustomObject>
    <fields>
        <fullName>Known_Issue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Summarised in Known Issue</label>
        <referenceTo>Known_Issue__c</referenceTo>
        <relationshipLabel>App Errors</relationshipLabel>
        <relationshipName>App_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Account__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; lkp_License__r.Salesforce_Org__r.Parent_Account__r.Id, lkp_License__r.Salesforce_Org__r.Parent_Account__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fix in User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>App Errors</relationshipLabel>
        <relationshipName>App_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>App Errors</relationshipLabel>
        <relationshipName>ErrorEmails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>sfLma__License__c</referenceTo>
        <relationshipLabel>App Errors</relationshipLabel>
        <relationshipName>CustomerErrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_PackageVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package Version</label>
        <referenceTo>sfLma__Package_Version__c</referenceTo>
        <relationshipLabel>App Errors</relationshipLabel>
        <relationshipName>CustomerErrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lkp_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Package</label>
        <referenceTo>sfLma__Package__c</referenceTo>
        <relationshipLabel>App Errors</relationshipLabel>
        <relationshipName>CustomerErrors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>txl_FullMailBody__c</fullName>
        <label>Full Mail Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txl_Stacktrace__c</fullName>
        <label>Stacktrace</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>txt_ApexClass__c</fullName>
        <label>Apex Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_MatchedWith__c</fullName>
        <label>Matched With</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_OrgId__c</fullName>
        <label>Org ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_UserId__c</fullName>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_VisualforcePage__c</fullName>
        <label>Page</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>App Error</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>txt_ExceptionType__c</columns>
        <columns>txt_ApexClass__c</columns>
        <columns>lkp_Package__c</columns>
        <columns>lkp_PackageVersion__c</columns>
        <columns>lkp_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>lkp_License__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Inbox</label>
    </listViews>
    <listViews>
        <fullName>NotAssignable</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>txl_FullMailBody__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>txt_OrgId__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>txt_Namespace__c</field>
            <operation>equals</operation>
        </filters>
        <label>Not assignable</label>
    </listViews>
    <nameField>
        <displayFormat>CER-{0000}</displayFormat>
        <label>App Error #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>App Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>